--- a/mspr_maven/pom.xml
+++ b/mspr_maven/pom.xml
@@ -7,7 +7,13 @@
     <groupId>org.example</groupId>
     <artifactId>mspr_maven</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <dependencies>
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
+        </dependency>
+    </dependencies>
     <build>
         <plugins>
             <plugin>
