--- a/mspr_maven/pom.xml
+++ b/mspr_maven/pom.xml
@@ -25,6 +25,11 @@
             <version>5.8.2</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.22.2</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
